Externalized configuration using vault configuration

--- a/booking-service/src/main/resources/bootstrap.yml
+++ b/booking-service/src/main/resources/bootstrap.yml
@@ -3,3 +3,12 @@ spring:
     name: booking-service
   config:
     import: optional:configserver:http://localhost:8888
+# Configuration of vault connection
+  cloud:
+    vault:
+      host: localhost
+      port: 8200
+      scheme: http
+      authentication: token
+      token: 00000000-0000-0000-0000-000000000000
+      application-name: booking-service
